@@ -1,5 +1,11 @@
 2008-06-07  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Patch.pm (analyze): Accept unexpected
+	end-of-file in patches if we're missing no more than 2 lines
+	of context. Output a warning instead.
+
+2008-06-07  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V3/quilt.pm (register_autopatch):
 	Register the newly created patch with quilt only if quilt has
 	already been used to apply the existing patches (or if we don't
